--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -3646,6 +3646,11 @@
   margin-top: 20px;
 }
 
+.front .election-page .election-graph table, .front .election-page .election-graph .social-share {
+  max-width: 420px;
+  margin: 0 auto;
+}
+
 @media all and (max-width: 767px) {
   #itg-user-forgot-password-multistep-form--3, #itg-user-forgot-password-multistep-form--2 {
     padding: 20px;
