--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -12079,3 +12079,13 @@ fieldset#edit-xmlsitemap{
     }
   }
 }
+[id*="itg-akamai-cache-akamai-log"]{
+  div.submit{padding-left: 250px;}
+  .fieldset-wrapper{
+    > p{
+      padding-left: 250px;
+      margin: 10px 0;
+      a{color: #008eb1;}
+    }
+  }
+}
