resolve ui issues

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -3661,6 +3661,11 @@
   font-family: Roboto;
 }
 
+.ticket-type-require label:after {
+  content: '*';
+  color: red;
+}
+
 @media all and (max-width: 767px) {
   #itg-user-forgot-password-multistep-form--3, #itg-user-forgot-password-multistep-form--2 {
     padding: 20px;
