--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -3666,10 +3666,7 @@
   color: red;
 }
 
-.election-page .col-el-5 .graph-design .highcharts-container {
-  height: 180px !important;
-}
-
+/*.election-page .col-el-5 .graph-design .highcharts-container{height: 180px !important;}*/
 @media all and (max-width: 767px) {
   #itg-user-forgot-password-multistep-form--3, #itg-user-forgot-password-multistep-form--2 {
     padding: 20px;
