resolve ui issues

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -9456,7 +9456,7 @@ div.node{
             }
           }
           > .image-widget-data{
-            height: 100px;
+            //height: 100px;
             float: none  !important;
             a.filefield-sources-imce-browse{
               background: url(../images/default_for_all.png) no-repeat left top / 100% auto;
