--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -10037,6 +10037,7 @@ div.node #comments h2 {
   text-decoration: none;
 }
 .node-videogallery-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data, .node-photogallery-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data, .node-story-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data, .node-breaking_news-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data, .node-podcast-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data {
+  height: 100px;
   float: none  !important;
 }
 .node-videogallery-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data a.filefield-sources-imce-browse, .node-photogallery-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data a.filefield-sources-imce-browse, .node-story-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data a.filefield-sources-imce-browse, .node-breaking_news-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data a.filefield-sources-imce-browse, .node-podcast-form .browse-media-file .form-field-type-image .form-type-managed-file .form-managed-file > .image-widget-data a.filefield-sources-imce-browse {
@@ -12674,9 +12675,14 @@ fieldset#edit-xmlsitemap {
 .browse-media-file .edit-image-info {
   color: #008eb1;
   position: absolute;
-  left: 115px;
-  top: 148px;
+  left: auto;
+  right: 0;
+  top: 32px;
   z-index: 9999;
+  width: 22px;
+  height: 20px;
+  padding-top: 1px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 [id*="itg-image-croping-image-info-form"] .form-item-syndicate {
@@ -12762,7 +12768,7 @@ fieldset#edit-xmlsitemap {
 }
 
 [id*="views-exposed-form-state-manager-page"] .views-submit-button .form-submit {
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 [id*="views-exposed-form-state-manager-page"] .views-submit-button a {
   margin-top: 10px;
