--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -7064,8 +7064,8 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
   }
 
   #itg_user_forgot_password_multistep_form .parent-background {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   #itg_user_forgot_password_multistep_form .parent-background .sign-in-link .signin-link {
     width: 50%;
@@ -7076,6 +7076,10 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
     width: 50%;
     padding-left: 5px;
     text-align: right;
+  }
+
+  [id*="itg_user_forgot_password_multistep_form"] #ufname {
+    padding: 0;
   }
 }
 @media all and (max-width: 480px) {
