--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -6612,8 +6612,8 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
   }
   #itg_user_forgot_password_multistep_form{
     .parent-background{
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 15px;
+      padding-right: 15px;
       .sign-in-link{
         .signin-link{
           width: 50%;
@@ -6627,6 +6627,9 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
         }
       }
     }
+  }
+  [id*="itg_user_forgot_password_multistep_form"] #ufname {
+    padding: 0;
   }
 }
 @media all and (max-width: 480px){
