--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3546,4 +3546,10 @@
         #itg-user-forgot-password-multistep-form--3, #itg-user-forgot-password-multistep-form--2{
             padding: 20px;
         }
+        .view-front-end-global-search .view-content .search-pic {
+          width: 145px;
+          height: 127px;
+          float: left;
+          img{height: auto !important;}
+        }
     }
