--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -10830,7 +10830,7 @@ section.sidebar .block-itg-ads {
   color: #515151;
 }
 .election-page .col-el-4 .graph-design .highcharts-title tspan:nth-child(1) {
-  font-size: 24px;
+  font-size: 32px;
 }
 .election-page .col-el-5 .graph-design .highcharts-title tspan:nth-child(1) {
   font-size: 16px;
@@ -14447,6 +14447,123 @@ span.close_btt {
 }
 .home-election .social-share li {
   margin-right: 7px;
+}
+
+.ad-blocker-content {
+  position: relative;
+}
+
+.ad-blocker-content:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 10px;
+  box-shadow: 0 -25px 50px 25px #fff;
+}
+
+.ad-blocker-content p {
+  padding: 10px 0;
+  font-size: 15px;
+  line-height: 27px;
+}
+
+.what-are h2 {
+  font-size: 18px;
+}
+.what-are p {
+  font-size: 15px;
+  line-height: 27px;
+  padding: 10px 0;
+}
+
+.feed-type {
+  padding: 30px 0 10px;
+}
+.feed-type h2 {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 34px;
+}
+.feed-type ul {
+  list-style: none;
+}
+.feed-type ul li {
+  display: inline-block;
+  vertical-align: top;
+  width: 24%;
+  padding: 10px 0;
+}
+.feed-type ul li a {
+  font-size: 16px;
+  line-height: 28px;
+  font-family: Roboto;
+  font-weight: 500;
+  color: #666;
+  padding-left: 30px;
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+}
+.feed-type ul li a:before {
+  content: '\f09e';
+  font-family: Fontawesome;
+  position: absolute;
+  line-height: 24px;
+  top: 1px;
+  left: 0;
+  width: 23px;
+  height: 23px;
+  padding-left: 3px;
+  box-sizing: border-box;
+  color: #fff;
+  text-align: center;
+  background-color: #fe9132;
+  border-radius: 50%;
+}
+.feed-type ul li a:hover {
+  color: #fe9132;
+}
+.feed-type p {
+  font-size: 15px;
+  line-height: 27px;
+}
+
+.feed-use {
+  background-color: #f8f8f8;
+  padding: 15px 23px;
+}
+.feed-use h3 {
+  font-size: 18px;
+}
+.feed-use p, .feed-use li {
+  font-size: 15px;
+  line-height: 24px;
+  padding: 10px 0;
+}
+.feed-use ul {
+  list-style: none;
+}
+.feed-use ul li {
+  position: relative;
+  padding: 10px 0 0 15px;
+}
+.feed-use ul li:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 20px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #9f9f9f;
+}
+.feed-use .feed-use-sep {
+  height: 1px;
+  background-color: #dedede;
+  margin: 10px 0 20px;
 }
 
 @media (min-width: 320px) {
