--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11862,6 +11862,70 @@ span.close_btt {
     }
   }
 }
+.ad-blocker-content {
+    position: relative;
+}
+.ad-blocker-content:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+    box-shadow: 0 -25px 50px 25px #fff;
+}
+.ad-blocker-content p {
+    padding: 10px 0;
+    font-size: 15px;
+    line-height: 27px;
+}
+
+.what-are{
+  h2{font-size: 18px;}
+  p{font-size: 15px; line-height: 27px; padding: 10px 0;}
+}
+.feed-type{
+  padding: 30px 0 10px;
+  h2{text-transform: uppercase; font-weight: 500; font-size: 28px; line-height: 34px;}
+  ul{
+    list-style: none;
+    li{
+      display: inline-block; vertical-align: top; width: 24%; padding: 10px 0;
+      a{
+        font-size: 16px; line-height: 28px; font-family: Roboto; font-weight: 500; color: #666; padding-left: 30px; display: inline-block; vertical-align: top; position: relative;
+        &:before{content: '\f09e'; font-family: Fontawesome; position: absolute; line-height: 24px; top: 1px; left: 0; width: 23px; height: 23px; padding-left: 3px; box-sizing: border-box; color: #fff; text-align: center; background-color: #fe9132; border-radius: 50%;}
+        &:hover{
+          color: #fe9132;
+        }
+      }
+    }
+  }
+
+  p{font-size: 15px; line-height: 27px;}
+}
+.feed-use{
+  background-color: #f8f8f8;
+  padding: 15px 23px;
+  h3{font-size: 18px;}
+  p, li{font-size: 15px; line-height: 24px; padding: 10px 0;}
+  ul{
+    list-style: none;
+    li{
+      position: relative; padding: 10px 0 0 15px;
+      &:before{
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 20px;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: #9f9f9f;
+      }
+    }
+  }
+  .feed-use-sep{height: 1px; background-color: #dedede; margin: 10px 0 20px;}
+}
 
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
