ITG-4097 #time 30m #comment Done.

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -3693,4 +3693,8 @@
   .sso-header {
     position: absolute;
   }
+
+  .election-page .graph-design .highcharts-title tspan:nth-child(1) {
+    font-size: 28px;
+  }
 }
