--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3566,4 +3566,7 @@
         .sso-header{
           position: absolute;
         }
+        .election-page .graph-design .highcharts-title tspan:nth-child(1){
+          font-size: 28px;
+        }
     }
