--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -10089,6 +10089,18 @@ div.node #comments h2 {
 .node-videogallery-form .itg-sidebar-form #Configuration .form-field-name-field-story-expires .form-type-checkboxes .form-checkbox {
   margin: 3px 5px;
 }
+.node-videogallery-form [id*="field-video-upload-values"] tr td {
+  padding-bottom: 10px;
+}
+.node-videogallery-form [id*="field-video-upload-values"] tr.odd {
+  background-color: #eee;
+}
+.node-videogallery-form [id*="field-video-upload-values"] tr.odd {
+  background-color: #f0f8ff;
+}
+.node-videogallery-form [id*="field-video-upload-values"] tr.drag-previous {
+  background-color: #f5f5dc;
+}
 
 [id*="edit-field-story-reporter"] tbody,
 [id*="field-video-anchor-values"] tbody {
