added progress bar

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1,6 +1,7 @@
 /*---------------------------- ITG CSS -----------------------------------*/
 @import "itg-variables";
 @import "itg-mixins";
+@import "_progressbar";
 /* Global CSS */
 *{
     @extend .mr-0;
