ITG-4129 #time 2h #comment ITG embed video issues with single video and slider resolved.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11468,8 +11468,20 @@ span.close_btt {
 
 /* CSS For embedded code */
 .itg-embed-photo-wrapper:empty{display: none;}
-.page-videogallery-embed, .page-photogallery-embed{background-color: #171717;}
+.page-videogallery-embed, .page-photogallery-embed, .page-embed-video{
+  #page, html, body{height: auto;}
+  #main{min-height: 0;}
+  .container{
+    padding: 0;
+    margin: 0;
+  }
+}
 .itg-embed-wrapper{
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  padding: 0 15px 15px;
+  background-color: #171717;
   h1.embed-title{font-size: 32px; margin: 25px 0; color: #fff; text-align: center;}
   .itg-embed-photo-wrapper{padding: 10px; background-color: #000; max-width: 773px; margin: 0 auto; width: 100%;}
   .itg-embed-photo-thumb{margin-top: 10px;}
@@ -11931,8 +11943,12 @@ span.close_btt {
 }
 
 .story-section .story-right .description{
+  iframe{
+    max-width: 100%;
+  }
   .itgvideo{
     > iframe{
+      max-width: 100%;
       min-height: 326px;
       #main{
         min-height: 0;
@@ -11944,6 +11960,7 @@ span.close_btt {
     }
   }
 }
+
 
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
