ITG-3708 #time 1h #comment page theming done.

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -12114,3 +12114,9 @@ fieldset#edit-xmlsitemap{
     }
   }
 }
+.node-syndication-rule{
+  .views-table{
+    margin-top: 0;
+    tbody td{border: none;}
+  } 
+}
