--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12909,3 +12909,10 @@ fieldset#edit-xmlsitemap {
   height: 29px;
   margin-left: 10px;
 }
+
+.node-syndication-rule .views-table, .node-syndication-rule [id*="field-newsl-add-news-values"], .node-syndication-rule .variables-and-field-container .variables table, .variables-and-field-container .variables .node-syndication-rule table, .node-syndication-rule .page-admin-structure-menu-manage #menu-overview, .page-admin-structure-menu-manage .node-syndication-rule #menu-overview, .node-syndication-rule [id*="protected-pages-configure"] fieldset table, [id*="protected-pages-configure"] fieldset .node-syndication-rule table, .node-syndication-rule [id*="protected-pages-edit"] fieldset table, [id*="protected-pages-edit"] fieldset .node-syndication-rule table, .node-syndication-rule .page-node-moderation, .node-syndication-rule #taxonomy-overview-terms, .node-syndication-rule [id*="daily-motion-video-dashboard"] table, [id*="daily-motion-video-dashboard"] .node-syndication-rule table {
+  margin-top: 0;
+}
+.node-syndication-rule .views-table tbody td, .node-syndication-rule [id*="field-newsl-add-news-values"] tbody td, .node-syndication-rule .variables-and-field-container .variables table tbody td, .variables-and-field-container .variables .node-syndication-rule table tbody td, .node-syndication-rule .page-admin-structure-menu-manage #menu-overview tbody td, .page-admin-structure-menu-manage .node-syndication-rule #menu-overview tbody td, .node-syndication-rule [id*="protected-pages-configure"] fieldset table tbody td, [id*="protected-pages-configure"] fieldset .node-syndication-rule table tbody td, .node-syndication-rule [id*="protected-pages-edit"] fieldset table tbody td, [id*="protected-pages-edit"] fieldset .node-syndication-rule table tbody td, .node-syndication-rule .page-node-moderation tbody td, .node-syndication-rule #taxonomy-overview-terms tbody td, .node-syndication-rule [id*="daily-motion-video-dashboard"] table tbody td, [id*="daily-motion-video-dashboard"] .node-syndication-rule table tbody td {
+  border: none;
+}
