--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -9800,6 +9800,9 @@ h1.about-us-heading{
   h3{
       color:#000;
   }
+  .social-share{
+    ul li:first-child{vertical-align: baseline;}
+  }
 }
 .factoids-slider{
     ul{        
