Worked on Octopus ITG-4155, ITG-4155

--- a/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
+++ b/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
@@ -37,7 +37,7 @@ and open the template in the editor.
   [id*="file-video-article-"], [id*="get-video-"]{
     display: inline-block;
     vertical-align: top;
-    padding: 0 20px;
+    padding: 20px 0;
   }
   .views-table td .slug-link a{
       color: #fff;
