--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -10418,8 +10418,8 @@ span.file a{pointer-events: none; color: #2f2f2f;}
   height: 45px;
 }
 #videoupload #edit-field-video-upload [id*="field-video-upload-values"] tbody tr:first-child td .file-widget > input[value="Remove"]{
-  display: inline-block;
-  vertical-align: top;
+/*  display: inline-block;
+  vertical-align: top;*/
 }
 .page-related-content{
   background-color: #fff;
